--- a/package.json
+++ b/package.json
@@ -15,7 +15,9 @@
     "@react-navigation/stack": "^5.14.5",
     "react": "17.0.1",
     "react-native": "0.64.1",
+    "react-native-dropdown-picker": "^5.1.19",
     "react-native-gesture-handler": "^1.10.3",
+    "react-native-modal": "^11.10.0",
     "react-native-reanimated": "^2.1.0",
     "react-native-remix-icon": "^0.3.0",
     "react-native-safe-area-context": "^3.2.0",
