--- a/package.json
+++ b/package.json
@@ -26,7 +26,8 @@
     "react-native-safe-area-context": "^3.2.0",
     "react-native-screens": "^3.3.0",
     "react-native-sqlite-2": "^3.3.0",
-    "react-native-svg": "^12.1.1"
+    "react-native-svg": "^12.1.1",
+    "react-native-toast-message": "^1.4.9"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
