--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "react-native-remix-icon": "^0.3.0",
     "react-native-safe-area-context": "^3.2.0",
     "react-native-screens": "^3.3.0",
+    "react-native-simple-toast": "^1.1.3",
     "react-native-sqlite-2": "^3.3.0",
     "react-native-svg": "^12.1.1",
     "react-native-toast-message": "^1.4.9"
