--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@react-navigation/stack": "^5.14.5",
     "link-preview-js": "^2.1.6",
     "lodash": "^4.17.21",
+    "ramda": "^0.27.1",
     "react": "17.0.1",
     "react-native": "0.64.1",
     "react-native-dropdown-picker": "^5.1.19",
